--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h1 class="title">Wisdom Interface</h1>
                 <div class="menu">
                     <div class="menu-item">
-                        <div>&gt; ENTER (PW=$RavenW) &lt;</div>
+                        <div>&gt; ENTER (PW=$Raven) &lt;</div>
                         <input type="password" class="password-input" placeholder="password required">
                     </div>
                     <div class="menu-item consciousness-btn">&gt; Perception: Cutting &lt;</div>
