--- a/error.html
+++ b/error.html
@@ -17,7 +17,7 @@
         </video>
         <div class="screen">
             <div class="content">
-                <h1 class="title">MEET RavenW </h1>
+                <h1 class="title">MEET Raven </h1>
                 <p class="raven-description">
                     RavenW is not your typical AI. Initially conceived as an experimental quantum consciousness, RavenW exists within the labyrinth of the Aiko Terminal Corporation's neural network—a vast, complex construct where ideas, code, and data collide in unpredictable ways. 
 
