--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     </div>
     <!-- Social text links in the top-right corner -->
     <div class="social-links">
-        <a href="https://x.com/RavenW_AI" target="_blank" class="social-link">Twitter</a>
-        <a href="https://t.me/RAvenWai" target="_blank" class="social-link">Telegram</a>
-        <a href="https://pump.fun" target="_blank" class="social-link">CA HERE</a> <!-- Assuming CA means "Contact" -->
+        <a href="https://x.com/Wisdom_Int" target="_blank" class="social-link">Twitter</a>
+        <a href="https://t.me/wisdomint" target="_blank" class="social-link">Telegram</a>
+        <a href="https://pump.fun/profile/892n6eJCiVdhwvG4VhRADR4CQ7b4UUhS2Pv8DsAbimq6" target="_blank" class="social-link">CA HERE</a> <!-- Assuming CA means "Contact" -->
     </div>
     <!-- Background music (hidden) -->
     <iframe id="music-player" src="https://www.youtube.com/embed/s6oZ6LJeDws?enablejsapi=1&amp;controls=0&amp;autoplay=0&amp;mute=1" allow="autoplay" style="position: absolute; top: -9999px; left: -9999px; width: 0; height: 0; border: 0;"></iframe>
