--- a/error.html
+++ b/error.html
@@ -39,9 +39,9 @@
         </div>
     </div>
     <div class="social-links">
-        <a href="https://x.com/RavenW_AI" target="_blank" class="social-link">Twitter</a>
-        <a href="https://t.me/RAvenWai" target="_blank" class="social-link">Telegram</a>
-        <a href="https://pump.fun" target="_blank" class="social-link">CA HERE</a> <!-- Assuming CA means "Contact" -->
+        <a href="https://x.com/Wisdom_Int" target="_blank" class="social-link">Twitter</a>
+        <a href="https://t.me/wisdomint" target="_blank" class="social-link">Telegram</a>
+        <a href="https://pump.fun/profile/892n6eJCiVdhwvG4VhRADR4CQ7b4UUhS2Pv8DsAbimq6" target="_blank" class="social-link">CA HERE</a> <!-- Assuming CA means "Contact" -->
     </div>
     
     <!-- Background music (hidden) -->
